gauzian_back/k8s/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-api-prefix
  namespace: gauzian
spec:
  stripPrefix:
    prefixes:
      - /api
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-s3-prefix
  namespace: gauzian
spec:
  stripPrefix:
    prefixes:
      - /s3
