gauzian_back/k8s/caddy-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: caddy
  namespace: gauzian
spec:
  replicas: 1
  selector:
    matchLabels:
      app: caddy
  template:
    metadata:
      labels:
        app: caddy
    spec:
      containers:
      - name: caddy
        image: angusvisual/gauzian-caddy:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
          name: http
        - containerPort: 443
          name: https
        volumeMounts:
        - name: caddy-config
          mountPath: /etc/caddy/Caddyfile
          subPath: Caddyfile
        - name: caddy-data
          mountPath: /data
        - name: caddy-config-vol
          mountPath: /config
      volumes:
      - name: caddy-config
        configMap:
          name: caddy-config
      - name: caddy-data
        emptyDir: {}
      - name: caddy-config-vol
        emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: caddy
  namespace: gauzian
spec:
  selector:
    app: caddy
  ports:
  - port: 80
    targetPort: 80
    name: http
  - port: 443
    targetPort: 443
    name: https
  type: NodePort
  externalTrafficPolicy: Cluster
  sessionAffinity: None
  # NodePorts fixes the ports so firewall/NAT rules stay stable
  ports:
  - name: http
    port: 80
    targetPort: 80
    nodePort: 31176
    protocol: TCP
  - name: https
    port: 443
    targetPort: 443
    nodePort: 31929
    protocol: TCP
