gauzian_back/k8s/front-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front
  namespace: gauzian
spec:
  replicas: 2
  selector:
    matchLabels:
      app: front
  template:
    metadata:
      labels:
        app: front
    spec:
      containers:
      - name: front
        image: angusvisual/gauzian-front:dev
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: front
  namespace: gauzian
spec:
  selector:
    app: front
  ports:
  - port: 8080
    targetPort: 3000
  type: ClusterIP
