gauzian_back/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gauzian-ingress
  namespace: gauzian
  annotations:
    # Ici on garde tes middlewares car c'est pour l'API et le backend
    traefik.ingress.kubernetes.io/router.middlewares: gauzian-strip-api-prefix@kubernetescrd,gauzian-strip-s3-prefix@kubernetescrd,gauzian-rate-limit-50-per-1s@kubernetescrd
    traefik.ingress.kubernetes.io/router.tls.certresolver: letsencrypt
spec:
  ingressClassName: traefik
  rules:
    - host: gauzian.pupin.fr
      http:
        paths:
        - backend:
            service:
              name: backend
              port:
                number: 3000
          path: /api
          pathType: Prefix
        - backend:
            service:
              name: minio
              port:
                number: 9000  # Ça c'est OK, c'est l'API S3 qui supporte le middleware
          path: /s3
          pathType: Prefix
        - backend:
            service:
              name: front
              port:
                number: 8080
          path: /
          pathType: Prefix
  tls:
    - hosts:
      - gauzian.pupin.fr
      secretName: gauzian-tls-traefik
